--- a/lsf_library/src/main/res/values/strings.xml
+++ b/lsf_library/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <!-- DateUtil -->
     <string name="date_today">今天</string>
     <string name="date_yesterday">昨天</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
